--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 <display-name>template</display-name>
 
 <welcome-file-list>
-<welcome-file>main.jsp</welcome-file>
+<welcome-file>index.jsp</welcome-file>
 </welcome-file-list>
 <filter>
   <filter-name>struts2</filter-name>
